# Solochain

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/messagehash/src/: lib.rs
pallets/pallet-por/: Cargo.toml
pallets/pallet-por/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  lib.rs
